--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
   },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
-    "migrate:run": "ts-node-dev ./node_modules/typeorm/cli.js migration:run",
-    "migrate:revert": "ts-node-dev ./node_modules/typeorm/cli.js migration:revert"
+    "migrate:apply": "sequelize-cli db:migrate",
+    "migrate:revert": "sequelize-cli db:migrate:undo",
+    "migrate:generate": "sequelize-cli migration:generate --name"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^15.0.2",
+    "@types/validator": "^13.1.3",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
@@ -26,7 +28,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.32"
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0"
   }
 }
