--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@types/cors": "^2.8.10",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^9.0.1",
