--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "14.x"
   },
   "scripts": {
+    "start": "ts-node src/server.ts",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
     "migrate:generate": "sequelize-cli migration:generate --name",
     "migrate:apply": "sequelize-cli db:migrate",
@@ -17,15 +18,14 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^15.0.2",
     "@types/validator": "^13.1.3",
-    "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.4"
+    "ts-node-dev": "^1.1.6"
   },
   "dependencies": {
-    "@types/cors": "^2.8.10",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^9.0.1",
@@ -34,6 +34,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   }
 }
