--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/html-pdf": "^2.2.0",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^15.0.2",
     "@types/validator": "^13.1.3",
@@ -32,6 +33,7 @@
     "cors": "^2.8.5",
     "dotenv": "^9.0.1",
     "express": "^4.17.1",
+    "html-pdf": "^3.0.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
