Test heroku deploy

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "engines": {
     "node": "14.x"
   },
+  "optionalDependencies": {
+    "fsevents": "2.1.2"
+  },
   "scripts": {
     "start": "node dist/server.js",
     "postinstall": "tsc",
