--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "engines": {
-    "node": "14.x"
-  },
-  "optionalDependencies": {
-    "fsevents": "2.1.2"
+    "node": "14.9.0",
+    "npm": "6.14.8"
   },
   "scripts": {
     "start": "node dist/server.js",
