--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "engines": {
-    "node": "14.9.0",
-    "npm": "6.14.8"
+    "node": "14.x"
   },
   "scripts": {
     "start": "node dist/server.js",
@@ -23,9 +22,9 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
-    "@types/html-pdf": "^2.2.0",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^15.0.2",
+    "@types/pdfkit": "^0.11.0",
     "@types/validator": "^13.1.3",
     "ts-node-dev": "^1.1.6"
   },
@@ -34,9 +33,10 @@
     "cors": "^2.8.5",
     "dotenv": "^9.0.1",
     "express": "^4.17.1",
-    "html-pdf": "^3.0.1",
+    "intl": "^1.2.5",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "pdfkit": "^0.12.1",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0",
