Reset password and profile update included

--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "ts-node-dev": "^1.1.6"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^9.0.1",
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
     "intl": "^1.2.5",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
