Fix build command for heroku

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node dist/server.js",
     "clean": "rimraf dist/",
     "copy-files": "copyfiles -u 1 src/**/*.hbs dist/",
-    "build": "yarn clean && tsc && yarn copy-files",
+    "build": "npm run clean && tsc && npm run copy-files",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
     "migrate:generate": "sequelize-cli migration:generate --name",
     "migrate:apply": "sequelize-cli db:migrate",
