--- a/.qovery.yml
+++ b/.qovery.yml
@@ -3,6 +3,7 @@ application:
   name: "moco-api"
   project: "moco-api"
   organization: "QoveryCommunity"
+  port: 3001
 databases:
 - type: "POSTGRESQL"
   name: "moco"
