--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/html-pdf": "^2.2.0",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^15.0.2",
     "@types/pdfkit": "^0.11.0",
@@ -38,6 +39,7 @@
     "dotenv": "^9.0.1",
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
+    "html-pdf": "^3.0.1",
     "intl": "^1.2.5",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
